--- a/exercicio/exercício.html
+++ b/exercicio/exercício.html
@@ -15,8 +15,8 @@
         <input id="email" type="email"/>
         <br />
         <label>Senha</label>
-        <input type="Senha"  /> <br />
-        <input type="submit" value="Casdastrar">
+        <input type="password"  /> <br />
+        <button>Cadastrar</button>
         
         
     </form>
