exercicio corrigido com adição so typesubmit

--- a/exercicio/exercício.html
+++ b/exercicio/exercício.html
@@ -16,7 +16,7 @@
         <br />
         <label>Senha</label>
         <input type="password"  /> <br />
-        <button>Cadastrar</button>
+        <button type="submit">Cadastrar</button>
         
         
     </form>
